k8s-ingress/ingress-kong/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: video-route
  namespace: default
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  hostnames:
    - watch.idea.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: webapp-video-svc
      kind: Service
      port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wear-route
  namespace: default
spec:
  parentRefs:
    - name: kong-gateway
      namespace: kong
  hostnames:
    - wear.idea.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: webapp-wear-svc
          kind: Service
          port: 8080
